--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sportsapp",
   "version": "0.1.0",
-  "homepage": "https://alokupadhya.github.io/belay-link",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
