--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sportsapp",
   "version": "0.1.0",
+  "homepage": "https://alokupadhya.github.io/belay-link",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
